--- a/project/image_processing.ipynb
+++ b/project/image_processing.ipynb
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "853ad6af-deda-4657-ab60-a7f34c1ddf49",
    "metadata": {},
    "outputs": [],
@@ -1854,17 +1854,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "d3ad10a4-ad77-44de-96e7-465a85c6d434",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': [0.7032023072242737,\n",
+       "  0.8586305379867554,\n",
+       "  0.8971621990203857,\n",
+       "  0.9278833866119385,\n",
+       "  0.949492335319519,\n",
+       "  0.9671960473060608,\n",
+       "  0.9731840491294861,\n",
+       "  0.9757875800132751,\n",
+       "  0.9880239367485046,\n",
+       "  0.9914084672927856],\n",
+       " 'loss': [1.1438742876052856,\n",
+       "  0.4635736048221588,\n",
+       "  0.3299930989742279,\n",
+       "  0.25349733233451843,\n",
+       "  0.19108043611049652,\n",
+       "  0.1462186723947525,\n",
+       "  0.11319593340158463,\n",
+       "  0.106869637966156,\n",
+       "  0.073223777115345,\n",
+       "  0.05577147379517555],\n",
+       " 'val_accuracy': [0.8239609003067017,\n",
+       "  0.8447432518005371,\n",
+       "  0.8435207605361938,\n",
+       "  0.8520782589912415,\n",
+       "  0.8569682240486145,\n",
+       "  0.8447432518005371,\n",
+       "  0.8459657430648804,\n",
+       "  0.8508557677268982,\n",
+       "  0.8581907153129578,\n",
+       "  0.8569682240486145],\n",
+       " 'val_loss': [0.5579818487167358,\n",
+       "  0.4686165153980255,\n",
+       "  0.4504469931125641,\n",
+       "  0.43935173749923706,\n",
+       "  0.4413600564002991,\n",
+       "  0.4588293135166168,\n",
+       "  0.4631504714488983,\n",
+       "  0.4566841721534729,\n",
+       "  0.4660423994064331,\n",
+       "  0.4682808220386505]}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "training_history_eff.history"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "3974f0cd-af4d-4f73-bee1-1ff8a6d83c37",
    "metadata": {},
    "outputs": [],
@@ -1872,7 +1922,7 @@
     "#Recording model in json\n",
     "import json\n",
     "with open(\"training_hist_eff.json\",\"w\") as f:\n",
-    "    jason.dump(training_history_eff.history,f)\n"
+    "    json.dump(training_history_eff.history,f)\n"
    ]
   },
   {
